<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.episode.detail.EpisodeDetailFragment">

    <ProgressBar
        android:id="@+id/loader_episode_detail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/id"
        android:layout_marginStart="@dimen/size10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/size15"
        android:textColor="@color/grey1"
        android:text="@string/id"
        android:textSize="@dimen/sp12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/txt_id_detail"
        android:layout_marginStart="@dimen/size10"
        app:layout_constraintStart_toEndOf="@id/id"
        app:layout_constraintBottom_toBottomOf="@id/id"
        app:layout_constraintTop_toTopOf="@id/id"
        android:textColor="@color/white"
        tools:text="@tools:sample/lorem"
        android:textSize="@dimen/sp24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/name"
        android:layout_marginTop="@dimen/size15"
        app:layout_constraintStart_toStartOf="@id/id"
        app:layout_constraintTop_toBottomOf="@id/txt_id_detail"
        android:text="@string/episode_name"
        android:textColor="@color/grey1"
        android:textSize="@dimen/sp12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/txt_name_episode_detail"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintStart_toStartOf="@id/name"
        tools:text="@tools:sample/lorem"
        android:textColor="@color/white"
        android:textSize="@dimen/sp24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/air_date"
        app:layout_constraintTop_toBottomOf="@id/txt_name_episode_detail"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/size10"
        android:text="@string/air_date"
        android:textColor="@color/grey1"
        android:layout_marginTop="@dimen/size15"
        android:textSize="@dimen/sp12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/txt_air_date_episode_detail"
        app:layout_constraintTop_toBottomOf="@id/air_date"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/size10"
        android:textColor="@color/white"
        tools:text="@tools:sample/lorem"
        android:textSize="@dimen/sp24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/episode"
        app:layout_constraintTop_toBottomOf="@id/txt_air_date_episode_detail"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/size10"
        android:layout_marginTop="@dimen/size15"
        android:textColor="@color/grey1"
        android:text="@string/episod"
        android:textSize="@dimen/sp12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/txt_episode_episode_detail"
        app:layout_constraintTop_toBottomOf="@id/episode"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/size10"
        tools:text="@tools:sample/lorem"
        android:textColor="@color/white"
        android:textSize="@dimen/sp24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/created"
        android:layout_marginStart="@dimen/size10"
        app:layout_constraintTop_toBottomOf="@id/txt_episode_episode_detail"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/created"
        android:textSize="@dimen/sp12"
        android:layout_marginTop="@dimen/size15"
        android:textColor="@color/grey1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/txt_created_episode_detail"
        android:layout_marginStart="@dimen/size10"
        app:layout_constraintTop_toBottomOf="@id/created"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@tools:sample/lorem"
        android:textColor="@color/white"
        android:textSize="@dimen/sp24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_episode"
        app:constraint_referenced_ids="id,txt_id_detail,name,txt_name_episode_detail,air_date, txt_air_date_episode_detail,episode,txt_episode_episode_detail,created,txt_created_episode_detail"
        android:layout_width="0dp"
        android:layout_height="0dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>