<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.location.detail.LocationDetailFragment">

    <ProgressBar
        android:id="@+id/loader_location_detail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/id"
        android:text="@string/id"
        android:layout_marginTop="@dimen/size15"
        android:layout_marginStart="@dimen/size10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="@dimen/sp15"
        android:textColor="@color/grey1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/txt_id_location_detail"
        android:layout_marginStart="@dimen/size10"
        app:layout_constraintStart_toEndOf="@id/id"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@tools:sample/lorem"
        android:textSize="@dimen/sp30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/name"
        android:layout_marginTop="@dimen/size15"
        android:layout_marginStart="@dimen/size10"
        android:textColor="@color/grey1"
        app:layout_constraintTop_toBottomOf="@id/txt_id_location_detail"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/location_name"
        android:textSize="@dimen/sp15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/txt_name_location_detail"
        android:layout_marginStart="@dimen/size10"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@tools:sample/lorem"
        android:textSize="@dimen/sp30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/type"
        android:layout_marginTop="@dimen/size15"
        app:layout_constraintTop_toBottomOf="@id/txt_name_location_detail"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/size10"
        android:text="@string/type"
        android:textColor="@color/grey1"
        android:textSize="@dimen/sp15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/txt_type_location_detail"
        app:layout_constraintTop_toBottomOf="@id/type"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/size10"
        tools:text="@tools:sample/lorem"
        android:textSize="@dimen/sp30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>



    <TextView
        android:id="@+id/dimension"
        android:layout_marginTop="@dimen/size15"
        app:layout_constraintTop_toBottomOf="@id/txt_type_location_detail"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/size10"
        android:text="@string/dimension"
        android:textSize="@dimen/sp15"
        android:textColor="@color/grey1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/txt_dimension_location_detail"
        app:layout_constraintTop_toBottomOf="@id/dimension"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/size10"
        android:textColor="@color/white"
        tools:text="@tools:sample/lorem"
        android:textSize="@dimen/sp30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_location"
        app:constraint_referenced_ids="id,txt_id_location_detail,name,txt_name_location_detail, type,txt_type_location_detail,dimension,txt_dimension_location_detail"
        android:layout_width="0dp"
        android:layout_height="0dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>